# ESP_PROJECT

./: .gitignore  CMakeLists.txt  ESP_PROJECT-ubuntu-setup.md  README.md  UBUNTU-QUICKREF.md  _build.bat  breadboard.md  build-and-flash.sh  doc.md  esp-setup.sh  run.md  sdkconfig.defaults  waveshare_wiring_colab.py
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/modem/: sim7670x.c  sim7670x.h
main/portal/: portal.c  portal.h
main/sensors/: current.c  current.h  ds18b20.c  ds18b20.h  mpu6050.c  mpu6050.h  phototransistor.c  phototransistor.h  reed_switch.c  reed_switch.h  temperature.c  temperature.h
